# gt_mapmaker

./: .gitignore  config.yaml  drop_picker.py  gen_tris.py  pyproject.toml
gt_mapmaker/: __init__.py  __main__.py  config.py  countries.py  drop.py  err.py  spawner.py  trigrid.py
gt_mapmaker/data/grids/: AD.pickle  AE.pickle  AF.pickle  AG.pickle  AI.pickle  AL.pickle  AM.pickle  AO.pickle  AR.pickle  AS.pickle  AT.pickle  AU.pickle  AW.pickle  AX.pickle  AZ.pickle  BA.pickle  BB.pickle  BD.pickle  BE.pickle  BF.pickle  BG.pickle  BH.pickle  BI.pickle  BJ.pickle  BL.pickle  BM.pickle  BN.pickle  BO.pickle  BR.pickle  BS.pickle  BT.pickle  BW.pickle  BY.pickle  BZ.pickle  CD.pickle  CF.pickle  CG.pickle  CH.pickle  CI.pickle  CK.pickle  (+194 more)
